[gd_scene load_steps=32 format=2]

[ext_resource path="res://GUI/Inventory/inventory_grid.png" type="Texture" id=1]
[ext_resource path="res://GUI/Inventory/Inventory/armor_slots.png" type="Texture" id=2]
[ext_resource path="res://GUI/Inventory/hotbar.png" type="Texture" id=3]
[ext_resource path="res://GUI/Inventory/InventoryOpened.gd" type="Script" id=4]
[ext_resource path="res://GUI/Inventory/Inventory/crafting_down.png" type="Texture" id=5]
[ext_resource path="res://GUI/Inventory/Crafting/inventory_down.png" type="Texture" id=6]
[ext_resource path="res://GUI/Inventory/Crafting/crafting_up.png" type="Texture" id=7]
[ext_resource path="res://GUI/Inventory/Inventory/inventory_up.png" type="Texture" id=8]
[ext_resource path="res://GUI/Inventory/Crafting/Crafting.gd" type="Script" id=9]
[ext_resource path="res://GUI/Inventory/Inventory/Inventory.gd" type="Script" id=10]
[ext_resource path="res://GUI/Inventory/Inventory/Grid.gd" type="Script" id=11]
[ext_resource path="res://GUI/Inventory/Inventory/Hotbar.gd" type="Script" id=12]
[ext_resource path="res://GUI/Inventory/Inventory/Armor.gd" type="Script" id=13]
[ext_resource path="res://GUI/Inventory/selector.png" type="Texture" id=14]
[ext_resource path="res://GUI/Inventory/paddles/right_paddle_down.png" type="Texture" id=15]
[ext_resource path="res://GUI/Inventory/paddles/left_paddle_down.png" type="Texture" id=16]
[ext_resource path="res://GUI/Inventory/paddles/left_paddle_up.png" type="Texture" id=17]
[ext_resource path="res://GUI/Inventory/paddles/right_paddle_up.png" type="Texture" id=18]
[ext_resource path="res://GUI/Inventory/Crafting/Blueprints.gd" type="Script" id=19]
[ext_resource path="res://GUI/Inventory/Crafting/Panel/craft_button_up.png" type="Texture" id=20]
[ext_resource path="res://GUI/Inventory/Crafting/Panel/craft_button_down.png" type="Texture" id=21]
[ext_resource path="res://GUI/Inventory/Crafting/Panel/panel.png" type="Texture" id=22]
[ext_resource path="res://GUI/Inventory/Crafting/Panel.gd" type="Script" id=23]
[ext_resource path="res://Fonts/slkscre.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://GUI/Inventory/Crafting/ErrorMessage.gd" type="Script" id=25]
[ext_resource path="res://GUI/Inventory/Crafting/CraftButton.gd" type="Script" id=26]
[ext_resource path="res://GUI/Inventory/Crafting/CancelCraft.gd" type="Script" id=27]
[ext_resource path="res://GUI/Inventory/Crafting/CancelCraft.tscn" type="PackedScene" id=28]
[ext_resource path="res://Fonts/type_writer.tres" type="DynamicFont" id=29]
[ext_resource path="res://Fonts/8px_plain_type_writer.tres" type="DynamicFont" id=30]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 24 )

[node name="InventoryOpened" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.903419
margin_right = 0.903412
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.096581
margin_right = 0.0965881
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="TextureRect" parent="Inventory"]
margin_left = 163.097
margin_top = 103.56
margin_right = 366.097
margin_bottom = 206.56
texture = ExtResource( 1 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor" type="TextureRect" parent="Inventory"]
margin_left = 35.0
margin_top = 95.0
margin_right = 134.0
margin_bottom = 195.0
texture = ExtResource( 2 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar" type="TextureRect" parent="Inventory"]
margin_left = 162.407
margin_top = 234.588
margin_right = 365.407
margin_bottom = 262.588
texture = ExtResource( 3 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryTab" type="TextureRect" parent="Inventory"]
margin_left = 165.0
margin_top = 92.0
margin_right = 222.0
margin_bottom = 105.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Inventory/InventoryTab"]
margin_left = 2.0
margin_top = 3.0
margin_right = 56.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Inventory"

[node name="CraftingButton" type="TextureButton" parent="Inventory"]
margin_left = 221.0
margin_top = 93.0
margin_right = 272.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Inventory/CraftingButton"]
margin_left = 2.0
margin_top = 3.0
margin_right = 50.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Crafting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector" type="TextureRect" parent="Inventory"]
visible = false
margin_left = 165.0
margin_top = 106.0
margin_right = 189.0
margin_bottom = 130.0
texture = ExtResource( 14 )

[node name="Crafting" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blueprints" type="TextureRect" parent="Crafting"]
margin_left = 163.097
margin_top = 104.0
margin_right = 366.097
margin_bottom = 207.0
texture = ExtResource( 1 )
script = ExtResource( 19 )

[node name="CraftingTab" type="TextureRect" parent="Crafting"]
margin_left = 221.0
margin_top = 92.0
margin_right = 272.0
margin_bottom = 105.0
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Crafting/CraftingTab"]
margin_left = 2.0
margin_top = 3.0
margin_right = 50.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Crafting"

[node name="InventoryButton" type="TextureButton" parent="Crafting"]
margin_left = 165.0
margin_top = 93.0
margin_right = 222.0
margin_bottom = 104.0
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="Crafting/InventoryButton"]
margin_left = 2.0
margin_top = 3.0
margin_right = 56.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Inventory"

[node name="LeftPaddle" type="TextureButton" parent="Crafting"]
margin_left = 327.0
margin_top = 207.0
margin_right = 346.0
margin_bottom = 221.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )

[node name="RightPaddle" type="TextureButton" parent="Crafting"]
margin_left = 346.0
margin_top = 207.0
margin_right = 364.0
margin_bottom = 221.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 15 )

[node name="Selector" type="TextureRect" parent="Crafting"]
visible = false
margin_left = 165.0
margin_top = 106.0
margin_right = 189.0
margin_bottom = 130.0
texture = ExtResource( 14 )

[node name="Panel" type="TextureRect" parent="Crafting"]
visible = false
margin_left = 39.0
margin_top = 91.0
margin_right = 128.0
margin_bottom = 212.0
texture = ExtResource( 22 )
script = ExtResource( 23 )

[node name="Icon" type="TextureRect" parent="Crafting/Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 24.0
margin_bottom = 24.0

[node name="ItemName" type="Label" parent="Crafting/Panel"]
margin_left = 34.0
margin_top = 13.0
margin_right = 97.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Crafting/Panel"]
margin_left = 6.0
margin_top = 35.0
margin_right = 160.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 30 )
autowrap = true
max_lines_visible = 2

[node name="Amount" type="Label" parent="Crafting/Panel"]
visible = false
margin_left = 34.0
margin_top = 108.0
margin_right = 70.0
margin_bottom = 117.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 30 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorMessage" type="Label" parent="Crafting"]
visible = false
margin_left = 50.0
margin_top = 213.0
margin_right = 181.0
margin_bottom = 222.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Not Enough MAterials"
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Crafting/ErrorMessage"]
one_shot = true

[node name="CraftButton" type="TextureButton" parent="Crafting"]
visible = false
margin_left = 66.0
margin_top = 184.0
margin_right = 101.0
margin_bottom = 197.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Craft" type="Label" parent="Crafting/CraftButton"]
margin_left = 3.0
margin_top = 2.99998
margin_right = 33.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Craft"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftAll" type="Label" parent="Crafting/CraftButton"]
visible = false
margin_left = 3.09658
margin_top = 3.0
margin_right = 53.0966
margin_bottom = 11.0
custom_fonts/font = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Craft All"

[node name="CancelCraft" parent="." instance=ExtResource( 28 )]
visible = false
margin_left = 40.0966
margin_right = 50.0966
script = ExtResource( 27 )
[connection signal="pressed" from="Inventory/CraftingButton" to="." method="_on_CraftingButton_pressed"]
[connection signal="pressed" from="Crafting/InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="timeout" from="Crafting/ErrorMessage/Timer" to="Crafting/ErrorMessage" method="_on_Timer_timeout"]
[connection signal="pressed" from="Crafting/CraftButton" to="Crafting" method="_on_CraftButton_pressed"]
[connection signal="pressed" from="CancelCraft" to="CancelCraft" method="_on_CancelCraft_pressed"]
